fix width on mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -36,13 +36,13 @@ dl {
 
 .landing-page {
   height: 100vh;
-  width: 100%;
   background-image: url(../images/background.jpeg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
   color: white;
+  margin: 0;
 }
 
 .glyphicon-menu-down {
@@ -116,8 +116,8 @@ label {
 
 /* ----- MARKETING ----- */
 
+
 .contact-us {
-  width: 100%;
   background-image: url(../images/background.jpeg);
   background-size: cover;
   background-attachment: fixed;
@@ -127,6 +127,7 @@ label {
   padding-top: 80px;
   padding-bottom: 80px;
   border: none;
+  margin: 0;
 }
 
 
